--- a/J2 - Google/index.html
+++ b/J2 - Google/index.html
@@ -27,7 +27,7 @@
 
 			<div class = "searchBar">
 				<div> <img src="LoupePicto.png"> </div>
-				<div> <input class = "searchText" type="text" title = "Recherche Google" size="60"></div>
+				<div> <input class = "searchText" type="text" title = "Rechercher" size="60"></div>
 				<div> <img src="MicroPicto.png"></div>
 			</div>
 
